--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -43,7 +43,7 @@ match_block_trailing_comma = true
 max_width = 100
 #merge_derives = true # default
 newline_style = "Unix"
-normalize_comments = true
+normalize_comments = false
 normalize_doc_attributes = true
 #overflow_delimited_expr = false # default
 #remove_nested_parens = true # default
